@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.10.0 - unreleased
 
+  MAHOUT-1605: Make VisualizerTest locale independent (Frank Rosner, Anand Avati via smarthi)
+
   MAHOUT-1652: Java 7 upgrade (smarthi)
 
   MAHOUT-1635: Getting an exception when I provide classification labels manually for Naive Bayes (apalumbo)
